--- a/src/index.html
+++ b/src/index.html
@@ -198,7 +198,7 @@
     </div>
 
     <div class="container" id="filters-and-aairbarchart">
-        <span class="title" tabindex="0">Age Adjusted Incidence Rate - <span data-statistics="ctaname"></span></span>
+        <span class="title" tabindex="0">Age-Adjusted Incidence Rates - <span data-statistics="ctaname"></span></span>
         
         <div id="incidence-barchart" aria-label="Chart of AAIR by race and sex for the selected filters"></div>
         <p>
