moved env and updated data

--- a/src/index.html
+++ b/src/index.html
@@ -248,8 +248,8 @@
             fewer than <span class="reportingMinCases">[REPLACE REPORTING MIN CASES]</span> cancer cases. Distributions
             of selected population demographic factors are also provided for each zone. These data are from the
             decennial U.S. Census or the Census’s American Community Survey.-->
-            To ensure confidentiality and stable statistical rates, cancer incidence rates are suppressed and reported as 
-            “0” or “No Data” when there are 15 or fewer cancer cases. Distributions
+            <!--To ensure confidentiality and stable statistical rates, cancer incidence rates are suppressed and reported as 
+            “0” or “No Data” when there are 15 or fewer cancer cases.--> Distributions
             of selected population demographic factors are also provided for each zone. These data are from the
             decennial U.S. Census or the Census’s American Community Survey.
             * To ensure confidentiality and stable statistical rates, cancer incidence rates are not reported if based on
