--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,17 @@
 <html lang="en">
 
 <head>
-    <title><span class="stateName">[REPLACE STATE/REGISTRY]</span> Cancer Registry</title>
+    <title>New Jersey State Cancer Registry</title>
+
+    <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-E0RQPJG4HW"></script>
+            <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-E0RQPJG4HW');
+        </script>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
